[project]
name = "discord-car-trading-bot"
version = "1.0.0"
description = "Advanced Discord bot for car trading with improved error handling, logging, and validation"
authors = [
    {name = "Bot Developer", email = "developer@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "discord.py>=2.3.0",
    "mysql-connector-python>=8.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
